--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port = 8090
+server.port = 80
 
-spring.datasource.url=jdbc:hsqldb:hsql://localhost:9001
-spring.datasource.username=SA
-spring.datasource.password=
+spring.datasource.url=www.db4free.net/socialnetwork01
+spring.datasource.username=snetwork01
+spring.datasource.password=12345678
 
 # Crear las tablas al iniciar la app:
 spring.jpa.hibernate.ddl-auto=create
