--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 		</dependency>
 		
+		<dependency>
+    			<groupId>mysql</groupId>
+   		 	<artifactId>mysql-connector-java</artifactId>
+  		</dependency>
+		
 		<!-- Logging Dependency -->
 		<dependency>
             <groupId>org.slf4j</groupId>
