--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 80
 
-spring.datasource.url=www.db4free.net/socialnetwork01
+spring.datasource.url=jdbc:mysql:www.db4free.net:3306/socialnetwork01
 spring.datasource.username=snetwork01
 spring.datasource.password=12345678
 
@@ -8,6 +8,8 @@ spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=create
 # No crear ninguna tabla, solo validar:
 #spring.jpa.hibernate.ddl-auto=validate
+# Indicaa Hibernate que use sintaxis mysql
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Para que Thymeleaf no sea tan estricto
 spring.thymeleaf.mode=LEGACYHTML5
