--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port = 80
 spring.datasource.url=jdbc:mysql:www.db4free.net:3306/socialnetwork01
 spring.datasource.username=snetwork01
 spring.datasource.password=12345678
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
+spring.jpa.database: MYSQL
 # Crear las tablas al iniciar la app:
 spring.jpa.hibernate.ddl-auto=create
 # No crear ninguna tabla, solo validar:
