--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=create
 # No crear ninguna tabla, solo validar:
 #spring.jpa.hibernate.ddl-auto=validate
 # Indicaa Hibernate que use sintaxis mysql
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Para que Thymeleaf no sea tan estricto
 spring.thymeleaf.mode=LEGACYHTML5
