--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 80
 
-spring.datasource.url=jdbc:mysql:www.db4free.net:3306/socialnetwork01
-spring.datasource.username=snetwork01
-spring.datasource.password=12345678
+spring.datasource.url= jdbc:mysql://85.10.205.173:3306/socialnetwork01
+spring.datasource.username= snetwork01
+spring.datasource.password= 12345678
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 spring.jpa.database: MYSQL
