--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,15 @@
    		 	<artifactId>mysql-connector-java</artifactId>
   		</dependency>
 		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+		
 		<!-- Logging Dependency -->
 		<dependency>
             <groupId>org.slf4j</groupId>
