--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
+		<dependency>
+        		<groupId>javax.xml.bind</groupId>
+        		<artifactId>jaxb-api</artifactId>
+        		<version>2.3.0</version>
+		</dependency>
 		
 		<!-- Logging Dependency -->
 		<dependency>
